5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1643_1055.log
== TEST (2019-04-14 19:52:55) 
-- CODE:
import math as m
g = 9.8
vo = float(input("valeocidade inicial: "))
a  = float(input("angulo do vetor de lancamento com solo"))
D  = float(input("Distancia entre o bird and pig: "))

R = ((vo**2)*sin(m.radians(2*a))/g
print(R)
valor_abs = abs(D - R)
print(valor_abs)
-- ERROR:
File "XXXX", line 8
    print(R)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:54:53) 
-- CODE:
import math as m
g = 9.8
vo = float(input("valeocidade inicial: "))
a  = float(input("angulo do vetor de lancamento com solo"))
D  = float(input("Distancia entre o bird and pig: "))

R = ((vo**2)*sin(2*m.radians(a))/g
print(R)
-- ERROR:
File "XXXX", line 8
    print(R)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:55:57) 
-- CODE:
import math as m
g = 9.8
vo = float(input("valeocidade inicial: "))
a  = float(input("angulo do vetor de lancamento com solo: "))
D  = float(input("Distancia entre o bird and pig: "))

R = ((vo**2)*sin(2*m.radians(a)))/g
print(R)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    R = ((vo**2)*sin(2*m.radians(a)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:56:25) 
-- CODE:
import math as m
g = 9.8
vo = float(input("valeocidade inicial: "))
a  = float(input("angulo do vetor de lancamento com solo: "))
D  = float(input("Distancia entre o bird and pig: "))

R = ((vo**2)*m.sin(2*m.radians(a)))/g
print(R)
-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:57:42) 
-- CODE:
import math as m
g = 9.8
vo = float(input("valeocidade inicial: "))
a  = float(input("angulo do vetor de lancamento com solo: "))
D  = float(input("Distancia entre o bird and pig: "))

R = ((vo**2)*m.sin(m.radians(2*a)))/g
print(R)
-- OUTPUT:
11.2482865705094
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:58:52) 
-- CODE:
import math as m
g = 9.8
vo = float(input("valeocidade inicial: "))
a  = float(input("angulo do vetor de lancamento com solo: "))
D  = float(input("Distancia entre o bird and pig: "))

R = ((vo**2)*m.sin(m.radians(2*a)))/g

if abs(D - R) <= 0.1:
	print("sim")
else:
	print("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:59:14) 
-- CODE:
import math as m
g = 9.8
vo = float(input("valeocidade inicial: "))
a  = float(input("angulo do vetor de lancamento com solo: "))
D  = float(input("Distancia entre o bird and pig: "))

R = ((vo**2)*m.sin(m.radians(2*a)))/g

if abs(D - R) <= 0.1:
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.303116
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
